fix(ui5-label): move asterisk to the right
The asterisk marking the ui5-label as required is now positioned
to the right side of the label text. A new property "showColon" was
introduced for proper positioning and avoiding truncation of the "colon"

--- a/packages/main/src/themes/Label.css
+++ b/packages/main/src/themes/Label.css
@@ -8,7 +8,6 @@
 	font-size: var(--sapMFontMediumSize);
 	font-weight: normal;
 	cursor: text;
-	direction: ltr;
 }	
 :host(:not([wrap])) .ui5-label-root {
 	font-weight: inherit;
